--- a/.github/workflows/zilant-ci.yml
+++ b/.github/workflows/zilant-ci.yml
@@ -7,58 +7,159 @@ on:
     branches: [ main, ci-check-ready ]
 
 jobs:
+  #────────────────────────────── Lint + type + tests ──────────────────────────────
   quality:
     name: quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-      - run: pip install -e .[dev]
-      - name: Prometheus scrape test
-        run: |
-          python - <<'PY'
-          import urllib.request, time
-          from zilant_prime_core.health import start_server
-          start_server(8000)
-          time.sleep(0.2)
-          assert urllib.request.urlopen('http://localhost:8000/metrics').status == 200
-          PY
-      - run: pre-commit run --all-files
-      - run: ruff check .
-      - run: black --check .
-      - run: isort --check-only .
-      - run: bandit -r src -ll
-      - run: semgrep ci
-      - run: mypy --config-file mypy.ini src
-      - run: pytest -q tests/test_contributing_sections.py tests/test_key_lifecycle.py tests/test_cli_key_audit.py tests/test_streaming_aead.py tests/test_pqcrypto.py tests/test_ui_launch.py tests/test_cli_output.py tests/test_metrics.py tests/test_health.py tests/test_health_additional.py tests/test_plugin_manager.py tests/test_s3_backend.py tests/test_onion.py tests/test_attestation.py tests/test_timelock.py tests/test_audit_ledger.py
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install dev-deps
+        run: pip install -e .[dev]
+
+      - name: Pre-commit
+        run: pre-commit run --all-files
+
+      - name: Ruff (lint)
+        run: ruff check .
+
+      - name: Black (format)
+        run: black --check .
+
+      - name: isort (imports)
+        run: isort --check-only .
+
+      - name: Bandit (SAST)
+        run: bandit -r src -ll
+
+      - name: Semgrep (SAST)
+        run: semgrep ci
+
+      - name: Mypy (types)
+        run: mypy --config-file mypy.ini src
+
+      - name: Pytest
+        run: ZILANT_ALLOW_ROOT=1 pytest -q
+
+  #────────────────────────────── Perf tests ──────────────────────────────
   perf:
-    name: perf
-    runs-on: ubuntu-latest
     needs: quality
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.13'
-      - run: pip install -e .[dev]
-      - run: pytest -q --maxfail=1 --disable-warnings -m perf
-
-  build-pq:
-    name: build-pq
     runs-on: ubuntu-latest
-    needs: [ quality, perf ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: "3.13"
       - run: pip install -e .[dev]
+      - run: SKIP_FUZZ=1 ZILANT_ALLOW_ROOT=1 pytest -q -m perf --disable-warnings --maxfail=1
+
+  #────────────────────────────── Large-file tests ──────────────────────────────
+  large-file-test:
+    needs: quality
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - run: pip install -e .[dev]
+      - run: pytest -q tests/test_stream_large.py tests/test_stream_resume.py
+
+  #────────────────────────────── CLI-polish tests ──────────────────────────────
+  cli-polish:
+    needs: quality
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - run: pip install -e .[dev]
+      - run: pytest -q tests/test_cli_observability.py
+
+  #────────────────────────────── Build docs ──────────────────────────────
+  docs:
+    needs: quality
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      # Устанавливаем Sphinx-deps
+      - name: Install docs-deps
+        run: pip install -e .[docs]
+
+      # Устанавливаем Node + mermaid-cli
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+      - name: Install Mermaid-CLI
+        run: npm install -g @mermaid-js/mermaid-cli
+
+      # Системные библиотеки для headless Chrome
+      - name: Install Chrome deps
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y \
+            libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 \
+            libxext6 libxfixes3 libxi6 libxrandr2 libxtst6 \
+            libnss3 libatk1.0-0 libgtk-3-0 libpangocairo-1.0-0
+
+      # Конфиг для Puppeteer (--no-sandbox workaround)
+      - name: Create puppeteer-config.json
+        run: |
+          mkdir -p docs
+          cat > docs/puppeteer-config.json << 'EOF'
+          { "args": ["--no-sandbox", "--disable-setuid-sandbox"] }
+          EOF
+
+      # Генерим диаграмму
+      - name: Generate Mermaid diagrams
+        run: |
+          npx mmdc \
+            -p docs/puppeteer-config.json \
+            -i docs/architecture/key_lifecycle.mmd \
+            -o docs/_static/key_lifecycle.svg
+
+      # Сборка HTML
+      - name: Build HTML docs
+        working-directory: docs
+        run: make html
+
+  #────────────────────────────── Build + Whitepaper + Artefacts ──────────────────────────────
+  build-pq:
+    needs: [ quality, perf ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+
+      - name: Install build deps
+        run: pip install -e .[dev] build pyyaml
 
       - name: Build PQ wheels
         run: python tools/build_pq_wheels.py
+
+      - name: Install Pandoc & XeLaTeX
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y pandoc texlive-xetex
+
+      - name: Prepare THREATS placeholder
+        # gen_whitepaper.py ищет docs/THREATS.md
+        run: cp docs/THREATS.rst docs/THREATS.md
+
+      - name: Generate Whitepaper
+        run: python tools/gen_whitepaper.py
 
       - name: Upload PQ wheels
         uses: actions/upload-artifact@v4
@@ -66,21 +167,7 @@ jobs:
           name: pq-wheels
           path: dist/*.whl
 
-      - name: Install Pandoc & XeLaTeX
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pandoc texlive-xetex fonts-dejavu
-
-      - name: Generate Whitepaper
-        run: python tools/gen_whitepaper.py
-
-      - name: Upload Whitepaper
-        uses: actions/upload-artifact@v4
-        with:
-          name: whitepaper
-          path: dist/whitepaper.pdf
-
-  # ↓— этот job пока отключён, т.к. нет скрипта tools/sign_artifacts.py
+  # Ниже ваш закомментированный шаг подписи — оставляем как есть
   # sign:
   #   name: sign
   #   runs-on: ubuntu-latest
@@ -89,7 +176,7 @@ jobs:
   #     - uses: actions/checkout@v4
   #     - uses: actions/setup-python@v5
   #       with:
-  #         python-version: '3.13'
+  #         python-version: "3.13"
   #     - run: pip install -e .[dev]
   #     - name: Sign artifacts
   #       run: python tools/sign_artifacts.py
