--- a/.github/workflows/zilant-ci.yml
+++ b/.github/workflows/zilant-ci.yml
@@ -7,7 +7,6 @@ on:
     branches: [ main, ci-check-ready ]
 
 jobs:
-  #────────────────────────────── Lint + type + tests ──────────────────────────────
   quality:
     name: quality
     runs-on: ubuntu-latest
@@ -46,7 +45,6 @@ jobs:
       - name: Pytest
         run: ZILANT_ALLOW_ROOT=1 pytest -q
 
-  #────────────────────────────── Perf tests ──────────────────────────────
   perf:
     needs: quality
     runs-on: ubuntu-latest
@@ -56,12 +54,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
-
       - run: pip install -e .[dev]
-
       - run: SKIP_FUZZ=1 ZILANT_ALLOW_ROOT=1 pytest -q -m perf --disable-warnings --maxfail=1
 
-  #────────────────────────────── Large-file tests ──────────────────────────────
   large-file-test:
     needs: quality
     runs-on: ubuntu-latest
@@ -72,12 +67,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
-
       - run: pip install -e .[dev]
-
       - run: pytest -q tests/test_stream_large.py tests/test_stream_resume.py
 
-  #────────────────────────────── CLI-polish tests ──────────────────────────────
   cli-polish:
     needs: quality
     runs-on: ubuntu-latest
@@ -87,12 +79,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
-
       - run: pip install -e .[dev]
-
       - run: pytest -q tests/test_cli_observability.py
 
-  #────────────────────────────── Build docs ──────────────────────────────
   docs:
     needs: quality
     runs-on: ubuntu-latest
@@ -135,7 +124,6 @@ jobs:
         working-directory: docs
         run: make html
 
-  #────────────────────────────── Build + Whitepaper + Artefacts ──────────────────────────────
   build-pq:
     needs: [ quality, perf ]
     runs-on: ubuntu-latest
@@ -173,21 +161,11 @@ jobs:
         with:
           name: pq-wheels
           path: dist/*.whl
+          if-no-files-found: ignore
 
-  #─────────────────────────────────────────────────────────────────────────────────────────
+  # sign (закомментировано)
   # sign:
-  #   name: sign
-  #   runs-on: ubuntu-latest
   #   needs: build-pq
+  #   runs-on: ubuntu-latest
   #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: "3.13"
-  #     - run: pip install -e .[dev]
-  #     - name: Sign artifacts
-  #       run: python tools/sign_artifacts.py
-  #     - uses: actions/upload-artifact@v4
-  #       with:
-  #         name: signed-artifacts
-  #         path: dist/*.sig
+  #     …
