Add secret scanner and auto changelog

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -27,3 +27,5 @@ jobs:
             ./.semgrep/custom
           generateSarif: true
           publishSarif: true
+          comment: true
+          autofix: true
