Fix license audit workflow

--- a/.github/workflows/license-audit.yml
+++ b/.github/workflows/license-audit.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install dependencies for license audit
+        run: pip install requests tomli packaging
+
       - name: Run license audit
         run: python tools/license_audit.py
 
