--- a/.github/workflows/crypto-threat-model.yml
+++ b/.github/workflows/crypto-threat-model.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install atheris pyyaml
+      - name: Install pytest
+        run: python -m pip install pytest
       - name: Run crypto model
         run: python tools/crypto_threat_model.py
       - name: Upload artifacts
