--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,7 @@ repos:
     hooks:
       - id: mypy
         name: mypy (type check)
-        additional_dependencies: ["types-requests", "types-PyYAML"]
+        additional_dependencies: ["types-requests", "types-PyYAML", "types-tabulate"]
         language_version: python3
         files: ^src/zilant_prime_core/(?!scripts/).*\.py$
 
