--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ test = [
   "pytest-cov>=5.0,<6.0",
   "pytest-timeout>=2.3,<3.0",
   "hypothesis>=6.100,<7.0",
+  "pytest-xdist>=3.5,<4.0",
   "filelock>=3.13,<4.0",
 ]
 dev = [
@@ -71,6 +72,7 @@ dev = [
   "pytest-cov>=5.0,<6.0",
   "pytest-timeout>=2.3,<3.0",
   "hypothesis>=6.100,<7.0",
+  "pytest-xdist>=3.5,<4.0",
   "filelock>=3.13,<4.0",
   "build",
   "twine",
@@ -82,6 +84,8 @@ dev = [
   "tqdm>=4.66.0",
   "psutil>=5.9.0",
   "requests>=2.32,<3.0",
+  "tabulate>=0.9",
+  "watchdog>=4.0",
 ]
 pq = [
   "pqclean[kyber768]",
@@ -94,6 +98,16 @@ docs = [
   "sphinx-autodoc-typehints>=1.25,<2.0",
   "m2r2",
   "sphinxcontrib-mermaid",
+]
+zkp = [
+  "pysnark-libsnark>=0.1.0",
+]
+legacy = [
+  "tomli; python_version<'3.11'",
+]
+cli = [
+  "tabulate>=0.9",
+  "watchdog>=4.0",
 ]
 metrics = [
   "prometheus-client>=0.16.0,<1.0",
