--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,7 @@ pytest-cov>=5.0.0
 pytest-timeout>=2.3.0
 hypothesis>=6.0.0
 click>=8.1.0
+pytest-xdist>=3.5.0
 
 # Линтеры и форматтеры:
 ruff>=0.2.0
@@ -41,3 +42,4 @@ zstandard>=0.23.0
 tqdm>=4.66.0
 psutil>=5.9.0
 requests>=2.32.0
+pysnark-libsnark>=0.1.0
