feat: ZilantFS v0.2 -- tree, RO-heal, decoy, CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,6 +10,7 @@ markers =
     perf: mark test as performance (deselect with '-m "not perf"')
     slow: mark test as slow
     heavy: mark test as heavy (long, cryptography, monkeypatch)
+    zilfs: tests for ZilantFS
 
 # — Список игнорируемых предупреждений (убирает warnings по потокам и mark)
 filterwarnings =
