--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -39,6 +39,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install WinFSP
         run: choco install winfsp -y
+      - name: Install sshfs-win
+        run: choco install sshfs -y
+      - name: Start SSH
+        run: |
+          Add-WindowsCapability -Online -Name OpenSSH.Server~~~~0.0.1.0
+          Start-Service sshd
       - name: Add Path
         run: echo "C:\\Program Files\\WinFsp\\bin" >> $env:GITHUB_PATH
       - name: Set up Python
@@ -49,3 +55,21 @@ jobs:
         run: pip install -e .[zilfs]
       - name: Smoke import
         run: python -c "import zilant_prime_core.zilfs"
+      - name: Remote mount copy
+        run: |
+          mkdir C:\\rem
+          sshfs root@localhost:/ C:\\rem -o StrictHostKeyChecking=no -o PasswordAuthentication=no || echo skip
+          dir C:\\rem
+
+  android-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - name: Build app
+        run: |
+          cd mobile/android && ./gradlew :app:assembleDebug
