--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -73,3 +73,8 @@ jobs:
       - name: Build app
         run: |
           cd mobile/android && ./gradlew :app:assembleDebug
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug
+          path: mobile/android/app/build/outputs/apk/debug/app-debug.apk
