--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -21,7 +21,7 @@ jobs:
             sudo apt-get update -qq
             sudo apt-get install -y fuse3 libfuse3-dev
           else
-            brew install macfuse fusepy
+            brew install macfuse
           fi
       - name: Set up Python
         uses: actions/setup-python@v5
