--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,7 +120,7 @@ notify = [
 ]
 zilfs = [
   "fusepy; sys_platform != 'win32'",
-  "pywinfspy; sys_platform == 'win32'",
+  "pywinfsp; sys_platform == 'win32'",
 ]
 tray = [
   "PySide6",
