--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           if [[ "$RUNNER_OS" == "Linux" ]]; then
             sudo apt-get update -qq
-            sudo apt-get install -y fuse3 libfuse3-dev
+            sudo apt-get install -y fuse libfuse2 fuse3 libfuse3-dev
           else
             brew install macfuse
           fi
