--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -19,17 +19,21 @@ jobs:
         run: |
           if [[ "$RUNNER_OS" == "Linux" ]]; then
             sudo apt-get update -qq
-            sudo apt-get install -y fuse libfuse2 fuse3 libfuse3-dev
+            sudo apt-get install -y libfuse2 libfuse3-dev
           else
-            brew install macfuse
+            echo "Skipping FUSE tests on macOS"
+            exit 0
           fi
       - name: Set up Python
+        if: runner.os == 'Linux'
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
       - name: Install deps
+        if: runner.os == 'Linux'
         run: pip install -e .[dev,zilfs]
       - name: Run tests
+        if: runner.os == 'Linux'
         env:
           ZILANT_ALLOW_ROOT: '1'
         run: pytest -q -m zilfs
@@ -45,8 +49,10 @@ jobs:
         run: |
           Add-WindowsCapability -Online -Name OpenSSH.Server~~~~0.0.1.0
           Start-Service sshd
-      - name: Add Path
-        run: echo "C:\\Program Files\\WinFsp\\bin" >> $env:GITHUB_PATH
+      - name: Add SSHFS-Win to PATH
+        run: |
+          echo "C:\\Program Files\\WinFsp\\bin" >> $env:GITHUB_PATH
+          echo "C:\\Program Files\\SSHFS-Win\\bin" >> $env:GITHUB_PATH
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -58,7 +64,7 @@ jobs:
       - name: Remote mount copy
         run: |
           mkdir C:\\rem
-          sshfs root@localhost:/ C:\\rem -o StrictHostKeyChecking=no -o PasswordAuthentication=no || echo skip
+          sshfs root@localhost:/ C:\\rem -o StrictHostKeyChecking=no -o PasswordAuthentication=no || echo "SSHFS mount skipped"
           dir C:\\rem
 
   android-build:
