chore: update changelog

--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -103,3 +103,17 @@ jobs:
         run: pip install -e .[wormhole]
       - name: Run e2e
         run: pytest -q tests/test_wormhole_e2e.py
+
+  wizard-e2e:
+    needs: [wormhole-e2e]
+    runs-on: ubuntu-latest
+    timeout-minutes: 2
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+      - name: Install deps (+ tty)
+        run: pip install -e .[cli]
+      - name: Run wizard test (pty)
+        run: pytest -q -m wizard
