--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
-sphinx>=7.2,<8.0
-furo>=2023.9
-sphinx-autodoc-typehints>=1.25,<2.0
+sphinx==7.2.6
+sphinx-autodoc-typehints
+sphinx-inline-tabs
 m2r2
 sphinxcontrib-mermaid
