--- a/.github/workflows/cosign-sign-artifacts.yml
+++ b/.github/workflows/cosign-sign-artifacts.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - run: pip install syft cyclonedx-cli cosign
       - run: syft . -o cyclonedx-json=sbom.json
       - run: cosign sign --key ${{ secrets.COSIGN_KEY }} sbom.json
