--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Install FUSE
         run: |
           if [[ "$RUNNER_OS" == "Linux" ]]; then
@@ -41,6 +43,8 @@ jobs:
     runs-on: windows-2022
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Install WinFSP
         run: choco install winfsp -y
       - name: Install sshfs-win
@@ -72,6 +76,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
@@ -92,6 +98,8 @@ jobs:
     timeout-minutes: 3
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Start relay
         run: |
           docker run -d -p 0:4003 --name relay mazzolino/magic-wormhole-relay
@@ -110,6 +118,8 @@ jobs:
     timeout-minutes: 2
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
       - uses: actions/setup-python@v5
         with:
           python-version: '3.13'
