--- a/.github/workflows/lint-docs.yml
+++ b/.github/workflows/lint-docs.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       # 1) Клонируем
       - uses: actions/checkout@v4
+        with:
+          lfs: true
 
       # 2) Устанавливаем Node и mermaid-cli
       - name: Setup Node.js
