infra: unify ci workflows

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,4 @@
+src/zilant_prime_core/** @QuantumKeyUYU/security
 src/** @QuantumKeyUYU
 tests/** @QuantumKeyUYU
 docs/** @QuantumKeyUYU @DocMaintainers
