--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.{gif,png,svg,mp4,jar,wasm} filter=lfs diff=lfs merge=lfs -text
 *.{apk,ipa,exe,dmg,7z,zip} filter=lfs diff=lfs merge=lfs -text
+*.{mp3,ogg,woff,woff2} filter=lfs diff=lfs merge=lfs -text
+docs/_build/** -diff -text
