--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,73 +1,38 @@
-# SPDX-License-Identifier: MIT
-# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
-
 name: CI
-
 on:
   push:
     branches: [main]
   pull_request:
-
-permissions:
-  contents: read
-  actions: read
-
 jobs:
-  build-test:
-    name: Lint & Test (Python ${{ matrix.python-version }})
-    runs-on: ubuntu-latest
+  tests:
+    uses: ./.github/workflows/reusable/pytest.yml
     strategy:
+      fail-fast: false
       matrix:
+        os: [ubuntu-latest, windows-2022]
         python-version: ['3.11', '3.12', '3.13']
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          lfs: true
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: pip
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ".[dev]"
-
-      - name: Lint
-        run: |
-          ruff check src tests
-          black --check src tests
-          mypy src
-
-      - name: Unit tests with coverage
-        run: |
-          pytest --cov=src --cov-report=xml
-
-      - name: Build PQ wheels
-        run: python tools/build_pq_wheels.py
-      - uses: actions/upload-artifact@v4
-        with:
-          name: pq-wheels
-          path: dist/*_pq*.whl
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-
-  trivy-scan:
-    name: Trivy SCA / CVE scan
+    with:
+      python-version: ${{ matrix.python-version }}
+      os: ${{ matrix.os }}
+      extras: dev
+    secrets: inherit
+  ci-durations:
+    if: github.event_name == 'pull_request'
+    needs: tests
     runs-on: ubuntu-latest
-    needs: build-test
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/github-script@v7
         with:
-          lfs: true
-
-      - name: Trivy scan (vuln only)
-        uses: aquasecurity/trivy-action@0.20.0
-        with:
-          scan-type: fs
-          scanners: vuln
-          ignore-unfixed: true
-          exit-code: '1'
+          script: |
+            const jobs = await github.paginate(github.rest.actions.listJobsForWorkflowRun, {
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.runId
+            });
+            const lines = jobs.map(j => `${j.name}: ${Math.round(j.duration_ms/60000)}m`).join('\n');
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: `CI durations:\n${lines}`
+            });
