--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -91,10 +91,12 @@ jobs:
         with:
           name: app-debug
           path: mobile/android/app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 5
 
   wormhole-e2e:
     needs: [fuse-test]
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     timeout-minutes: 3
     steps:
       - uses: actions/checkout@v4
