--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -8,3 +8,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: wagoid/commitlint-github-action@v5
+        with:
+          failOnWarnings: true
+          args: '--max-warnings 0'
