--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,7 +155,7 @@ known_standard_library = ["tomllib"]
 
 
 [tool.ruff.lint]
-select = ["E", "F", "W", "C90", "B"]
+select = ["E", "F", "W", "C90", "B", "RUF"]
 ignore = ["E402", "B904", "C901"]
 
 
