--- a/.github/workflows/cosign-sign-artifacts.yml
+++ b/.github/workflows/cosign-sign-artifacts.yml
@@ -6,7 +6,7 @@ on:
     types: [completed]
 
 jobs:
-  sign:
+  sbom:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -14,10 +14,21 @@ jobs:
           lfs: true
       - run: pip install syft cyclonedx-cli cosign
       - run: syft . -o cyclonedx-json=sbom.json
-      - run: cosign sign --key ${{ secrets.COSIGN_KEY }} sbom.json
-      - run: cosign sign --key ${{ secrets.COSIGN_KEY }} dist/whitepaper.pdf
-      - run: cosign upload --rekor-url $REKOR_URL --key ${{ secrets.COSIGN_KEY }} dist/*.whl
-      - run: cosign verify --rekor-url $REKOR_URL dist/*.whl
+      - uses: actions/upload-artifact@v4
+        with:
+          name: sbom
+          path: sbom.json
+  sign:
+    needs: sbom
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          lfs: true
+      - uses: actions/download-artifact@v4
+        with:
+          name: sbom
+      - run: cosign attach sbom --sbom sbom.json dist/*.whl
+      - run: cosign sign --key ${{ secrets.COSIGN_KEY }} dist/*.whl
     env:
-      REKOR_URL: ${{ secrets.REKOR_URL }}
       COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
