--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,4 +23,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: yourorg/zilant:latest, yourorg/zilant:${{ github.ref_name }}
+      - name: Test image
+        run: docker run --rm yourorg/zilant:latest zilant --version
