--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/setup-python@v5
         with: {python-version: '3.x'}
       - name: Install dependencies
-        run: |
-          pip install sphinx sphinx-rtd-theme
+        run: pip install -r docs/requirements.txt
       - name: Build docs
         run: |
           cd docs
