--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -25,11 +25,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install gitleaks
+        run: sudo apt-get install -y gitleaks
       - name: Run secret scanner
-        run: python tools/secret_scanner.py
+        run: gitleaks detect --baseline gitleaks.baseline --source . --no-banner --report-format sarif --report-path gitleaks.sarif
 
       - name: Upload secret scan report
         uses: actions/upload-artifact@v4
         with:
           name: secret-scan-report
-          path: secret_leak_report.md
+          path: gitleaks.sarif
