ci: fix secret scan and wormhole deps

--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -28,7 +28,13 @@ jobs:
       - name: Install gitleaks
         run: sudo apt-get install -y gitleaks
       - name: Run secret scanner
-        run: gitleaks detect --baseline gitleaks.baseline --source . --no-banner --report-format sarif --report-path gitleaks.sarif
+        run: |
+          gitleaks detect \
+            -b gitleaks.baseline \
+            --source . \
+            --no-banner \
+            --report-format sarif \
+            --report-path gitleaks.sarif
 
       - name: Upload secret scan report
         uses: actions/upload-artifact@v4
