--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -108,8 +108,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-      - name: Install deps
-        run: pip install -e .[wormhole]
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[dev]
       - name: Run e2e
         run: pytest -q tests/test_wormhole_e2e.py
 
