--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -112,6 +112,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .[dev]
+          pip install pytest
       - name: Run e2e
         run: pytest -q tests/test_wormhole_e2e.py
 
@@ -126,8 +127,11 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-      - name: Install deps (+ tty)
-        run: pip install -e .[cli]
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[dev,cli]
+          pip install pytest
       - name: Run wizard test (pty)
         run: pytest -q -m wizard
       - name: Install docs deps
