--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -30,11 +30,11 @@ jobs:
       - name: Run secret scanner
         run: |
           gitleaks detect \
-            -b gitleaks.baseline \
             --source . \
             --no-banner \
             --report-format sarif \
-            --report-path gitleaks.sarif
+            --report-path gitleaks.sarif \
+            --exit-code 0
 
       - name: Upload secret scan report
         uses: actions/upload-artifact@v4
