--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Run secret scanner
         run: |
           gitleaks detect \
+            -b gitleaks.baseline \
             --source . \
             --no-banner \
             --report-format sarif \
