--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-2022]
-        python-version: ['3.11', '3.12', '3.13']
+        python-version: ['3.11', '3.12']
     with:
       python-version: ${{ matrix.python-version }}
       os: ${{ matrix.os }}
