--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -90,7 +90,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
-          path: mobile/android/app/build/outputs/apk/debug/*.apk
+          path: mobile/android/app/build/outputs/apk/debug/app-debug.apk
           retention-days: 5
 
   wormhole-e2e:
@@ -112,7 +112,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt -r requirements-dev.txt
-          pip install -e .
+          pip install -e .[cli]
       - name: Run e2e
         run: python -m pytest tests/test_wormhole_e2e.py
 
