--- a/.github/workflows/pytest-reusable.yml
+++ b/.github/workflows/pytest-reusable.yml
@@ -33,6 +33,7 @@ jobs:
           path: ~/.npm
           key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
       - name: Install deps
+        shell: bash {0}
         run: |
           extras="${{ inputs.extras }}"
           if [ -n "$extras" ]; then
@@ -41,6 +42,6 @@ jobs:
             pip install -e .
           fi
       - name: Pre-commit
-        run: pre-commit run --all-files
+        run: pre-commit run --all-files --hook-stage manual
       - name: Pytest
         run: pytest -q -m "not slow"
