--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,11 +11,12 @@ repos:
 
   # Ruff – линтинг (pre-commit поддерживается через отдельный репо)
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.0
+    rev: v0.4.4
     hooks:
       - id: ruff
         name: Ruff (lint)
-        args: ["--fix"]
+        args: ["--unsafe-fixes"]
+        stages: [commit]
         language_version: python3
 
   # isort – проверка и сортировка импортов
@@ -25,6 +26,7 @@ repos:
       - id: isort
         name: isort (check imports)
         args: ["--profile", "black"]
+        stages: [commit]
         language_version: python3
 
   # Проверка YAML, удаление лишних пробелов, финальная пустая строка
