chore: drop platform key from fuzz hook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ dev = [
   "filelock>=3.13,<4.0",
   "build",
   "twine",
-  "atheris>=2.1; python_version < '3.12'",
+  "atheris>=2.1; sys_platform == 'linux' and python_version < '3.12'",
   "pyinstaller>=6.0",
   "types-PyYAML>=6.0",
   "types-tabulate",
