--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -29,7 +29,7 @@ cryptography>=38.0.4
 filelock>=3.13.0
 pynacl>=1.5.0
 pre-commit>=2.20.0
-atheris>=2.1.0; python_version < "3.12"
+atheris>=2.1.0; sys_platform == "linux" and python_version < "3.12"
 
 # Метрики и веб-сервер
 flask>=2.2.0
