--- a/.github/workflows/fuse.yml
+++ b/.github/workflows/fuse.yml
@@ -90,7 +90,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
-          path: mobile/android/app/build/outputs/apk/debug/app-debug.apk
+          path: mobile/android/app/build/outputs/apk/debug/**/app*-debug*.apk
           retention-days: 5
 
   wormhole-e2e:
