--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,23 @@ on:
     branches: [main]
   pull_request:
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          lfs: true
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - name: Install
+        run: pip install pre-commit
+      - name: Pre-commit
+        run: pre-commit run --all-files --hook-stage manual
+
   tests:
+    needs: pre-commit
     uses: ./.github/workflows/pytest-reusable.yml
     strategy:
       fail-fast: false
